--- a/styles/main.css
+++ b/styles/main.css
@@ -52,10 +52,10 @@ h3 {color: rgb(38, 204,75);margin: 0; text-align: center;}
     border-radius: 50%;} 
  .skill5 {display: inline-block;
      width: 30%;
-     color: white; }
+     color: white;}
 
      .bar5 { width: 20%; background-color: #FFFFFF; display: inline-block; width: 25%;
-        border-radius: 50%;} 
+        border-radius: 50%;margin-bottom: 5%;} 
  .skill6 {display: inline-block;
      width: 30%
     ; color: white;}
@@ -72,6 +72,7 @@ h3 {color: rgb(38, 204,75);margin: 0; text-align: center;}
 h6{text-align: center;}
 
 .clientes1 { margin-left: 15%; margin-bottom: 5%; }
+.logos { margin-left: 15%;}
 
 
 
