--- a/styles/main.css
+++ b/styles/main.css
@@ -6,7 +6,7 @@ main { max-width: 960px;}
 /*cabecera MI PAGINA PERSONAL*/
 
 h1{text-align: center; font-size: medium; text-shadow: 5px 5px 2.5px blueviolet; }
-header {background-image: url(/imgenes/IMAGEN.png); background-size: 100% 100%; height: 200px; 
+header {background-image: url(./imgenes/IMAGEN.png); background-size: 100% 100%; height: 200px; 
 border-top-left-radius: 10px  ; border-top-right-radius: 10px;
 }
 
